--- a/avasah2/info/templates/nav-bar.html
+++ b/avasah2/info/templates/nav-bar.html
@@ -9,11 +9,10 @@
         <meta content="Construction Company Website Template" name="description">
 
         <!-- Favicon -->
-        <link href="/static/img/favicon.ico" rel="icon">
+        <link href="/static/img/Avasah.png" rel="icon">
 
         <!-- Google Font -->
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
         <!-- CSS Libraries -->
         <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -41,12 +40,9 @@
                                 <a href="{% url 'about' %}" class="nav-item nav-link active font-weight-bold">About</a>
                                 <a href="{% url 'service' %}" class="nav-item nav-link font-weight-bold">Service</a>
                                 <a href="{% url 'team' %}" class="nav-item nav-link font-weight-bold">Patners</a>
-                                <!--<a href="{% url 'portfolio' %}" class="nav-item nav-link font-weight-bold">Project</a>-->
-                                <!--<a href="{% url 'blog' %}" class="nav-item nav-link font-weight-bold">Blog Page</a>-->
-                                <!--<a href="{% url 'single' %}" class="nav-item nav-link font-weight-bold">Single Page</a>-->
                                 <a href="{% url 'contact' %}" class="nav-item nav-link font-weight-bold">Contact</a>
                             <div class="ml-auto">
-                                <a class="btn text-black" href="{% url 'query' %}" >Query Here</a>
+                                <a class="font-weight-bold" href="{% url 'query' %}" >Query Here</a>
                             </div>
                         </div>
                     </nav>
@@ -63,8 +59,8 @@
                             <div class="footer-contact">
                                 <h2>Office Contact</h2>
                                 <p><i class="fa fa-map-marker-alt"></i>Vijay Nagar</p>
-                                <p><i class="fa fa-phone-alt"></i>+91-8770084705</p><br>
-                                <p><i class="fa fa-envelope"></i>abhishek.verma233@gmail.com</p>
+                                <p><i class="fa fa-phone-alt"></i>+91-8770084705</p>
+                                <p><i class="fa fa-envelope"></i>Avasahinfo@gmail.com</p>
                                 <div class="footer-social">
                                     <a href=""><i class="fab fa-twitter"></i></a>
                                     <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -77,10 +73,9 @@
                         <div class="col-md-6 col-lg-3 ml-5">
                             <div class="footer-link">
                                 <h2>Services Areas</h2>
-                                <a href=""><p>Residential Property</p></a>
-                                <a href=""><p>Commercial property</p></a>
-                                <a href=""><p>Agriculture Property</p></a>
-                                
+                                <a href="">Residential Property</a>
+                                <a href="">Commercial property</a>
+                                <a href="">Agriculture Property</a>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-3 ml-5">
