--- a/avasah2/info/static/css/style.css
+++ b/avasah2/info/static/css/style.css
@@ -2,7 +2,7 @@
 /********* General CSS *********/
 /*******************************/
 body {
-    color: #11554c;
+    color: #ffffff;
     background: #296494;
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
@@ -14,7 +14,7 @@ h3,
 h4,
 h5, 
 h6 {
-    color: #dfdfdf;
+    color: #c4c4c4;
 }
 
 a {
@@ -25,7 +25,7 @@ a {
 a:hover,
 a:active,
 a:focus {
-    color: #3b5998;
+    color: #858a95;
     outline: none;
     text-decoration: none;
 }
@@ -139,7 +139,7 @@ a:focus {
 
 @media (min-width: 992px) {
     .top-bar {
-        padding: 0 60px;
+        padding: 0 40px;
     }
 }
 
@@ -172,7 +172,7 @@ a:focus {
 }
 
 .nav-bar .navbar {
-    height: 100%;
+    height: 80%;
     background: #3b5998 !important;
 }
 
@@ -180,7 +180,7 @@ a:focus {
 .navbar-dark .navbar-nav .nav-link:focus,
 .navbar-dark .navbar-nav .nav-link:hover,
 .navbar-dark .navbar-nav .nav-link.active {
-    padding: 10px 10px 8px 10px;
+    padding: 0px 0px 0px 0px;
     color: #5c7f8d;
 }
 
@@ -199,7 +199,7 @@ a:focus {
 
 .nav-bar .btn {
     color: #f3f6ff;
-    border: 2px solid #f3f6ff;
+    border: solid #f3f6ff;
     border-radius: 0;
 }
 
@@ -219,7 +219,7 @@ a:focus {
     }
     
     .nav-bar .navbar {
-        padding: 20px;
+        padding: 0px;
     }
     
     .nav-bar .navbar-brand {
@@ -2232,3 +2232,24 @@ a:focus {
         text-align: center;
     }
 }
+
+.imgcard {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: 300px;
+    margin: 20px;
+    border-radius: 5px;
+    overflow: hidden;
+  }
+  
+  .imgcard img {
+    width: 100%;
+    height: auto;
+    transition: transform 0.3s;
+  }
+
+  .imgcard img.zoomable:hover, .imgcard img.zoomable:focus {
+    transform: scale(1.1);
+  }
+  
+  
