--- a/avasah2/info/templates/contact.html
+++ b/avasah2/info/templates/contact.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
             <!-- Page Header Start -->
-            <div class="page-header">
+            <div class="page-header pt-4 pb-4">
                 <div class="container">
                     <div class="row">
                         <div class="col-12">
