--- a/avasah2/info/templates/index.html
+++ b/avasah2/info/templates/index.html
@@ -12,7 +12,7 @@
                 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="/static/img/carousel-2.jpg" alt="Carousel Image">
+                        <img src="/static/img/carousel-5.jpg" alt="Carousel Image">
                         <div class="carousel-caption">
                             <p class="animated fadeInRight">We Are Professional</p>
                             <h1 class="animated fadeInLeft">For Your Dream Project</h1>
@@ -21,7 +21,7 @@
                     </div>
 
                     <div class="carousel-item">
-                        <img src="/static/img/carousel-3.jpg" alt="Carousel Image">
+                        <img src="/static/img/carousel-4.jpg" alt="Carousel Image">
                         <div class="carousel-caption">
                             <p class="animated fadeInRight text-white">Professional Builder</p>
                             <h1 class="animated fadeInLeft text-white">We Build Your Home</h1>
@@ -30,7 +30,7 @@
                     </div>
 
                     <div class="carousel-item">
-                       <!-- <img src="/static/img/carousel-1.jpg" alt="Carousel Image">-->
+                       <img src="/static/img/carousel-1.jpg" alt="Carousel Image">
                         <div class="carousel-caption">
                             <p class="animated fadeInRight text-white">We Are Trusted</p>
                             <h1 class="animated fadeInLeft text-white">For Your Dream Home</h1>
@@ -195,7 +195,7 @@ In conclusion, Avasah is a property technology company that is leading the charg
                                 <div class="service-img">
                                     <img src="/static/img/service-1.jpg" alt="Image">
                                     <div class="service-overlay">
-                                        <a href="{% url 'query' %}" class='text-white' >
+                                        <a href="{% url 'service' %}" class='text-white' >
                                             <p class='text-white'>  
                                                 A residential plot is a piece of land that is zoned for residential use, which means it can be used to build a home or other type of residential property. Residential plots come in different sizes and shapes, and can be found in different locations such as suburbs, cities, or rural areas. Purchasing a residential plot allows a person to build a custom home that meets their unique needs and preferences, and can be a valuable investment for the future. 
                                             </p>
@@ -213,7 +213,7 @@ In conclusion, Avasah is a property technology company that is leading the charg
                                 <div class="service-img">
                                     <img src="/static/img/service-2.jpg" alt="Image">
                                     <div class="service-overlay">
-                                        <a href="{% url 'query' %}" class='text-white' >
+                                        <a href="{% url 'service' %}" class='text-white' >
                                             <p>
                                                 A commercial plot is a piece of land that is zoned for commercial use, which means it can be used for commercial purposes such as office buildings, retail stores, hotels, and other commercial enterprises. Commercial plots can be found in a variety of locations, industrial areas, and other areas that are zoned for commercial use. Purchasing a commercial plot can be a valuable investment, as it allows a business to own property and control their physical location.
                                             </p>
@@ -250,7 +250,7 @@ In conclusion, Avasah is a property technology company that is leading the charg
 
 
             <!-- Video Start -->
-            <div class="video wow fadeIn" data-wow-delay="0.1s">
+          <!--  <div class="video wow fadeIn" data-wow-delay="0.1s">
                 <div class="container">
                     <button type="button" class="btn-play" data-toggle="modal" src="" data-target="#videoModal">
                         <span></span>
@@ -265,19 +265,19 @@ In conclusion, Avasah is a property technology company that is leading the charg
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>        
-                            <!-- 16:9 aspect ratio -->
-                            <div class="embed-responsive embed-responsive-16by9">
+                                16:9 aspect ratio -->
+                           <!-- <div class="embed-responsive embed-responsive-16by9">
                                 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed?v=5_8MAhaoyVk&list=RD5_8MAhaoyVk&start_radio=1" id="video" allowscriptaccess="always"></iframe>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- Video End -->
 
 
             <!-- Team Start -->
-            <div class="team">
+           <!--  <div class="team">
                 <div class="container">
                     <div class="section-header text-center">
                         <p>Our Patners</p>
@@ -354,7 +354,7 @@ In conclusion, Avasah is a property technology company that is leading the charg
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- Team End -->
             
 
@@ -569,7 +569,7 @@ In conclusion, Avasah is a property technology company that is leading the charg
 
 
             <!-- Blog Start -->
-            <div class="blog">
+           <!-- <div class="blog">
                 <div class="container">
                     <div class="section-header text-center">
                         <p>Latest Blog</p>
@@ -638,6 +638,6 @@ In conclusion, Avasah is a property technology company that is leading the charg
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <!-- Blog End -->
 {% endblock content %}          
